screen only for mobile container

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,19 @@
 
     <style>
         #mobile-container {
+            background-color: #C2C2C2;
             display: flex;
             justify-content: center;
+            min-height: 100vh;
         }
 
         #app {
             max-width: 375px;
+            max-height: 812px;
+        }
+
+        .v-application--wrap {
+            min-height: inherit !important;
         }
     </style>
 </head>
