epithelial tissue cubic simple pavement

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
         .v-application--wrap {
             min-height: inherit !important;
         }
+
+        .contain {
+            height: 100%;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
