--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,13 @@
     <title>HistoLabApp</title>
 
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         #mobile-container {
-            background-color: #C2C2C2;
+            background-color: #FFCCCC;
             display: flex;
             justify-content: center;
             min-height: 100vh;
@@ -44,12 +49,91 @@
             height: 100%;
             width: 100%;
         }
+
+        #loader {
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #circle-container {
+            position: relative;
+            width: 77px;
+            height: 15px;
+        }
+
+        .lds-ellipsis div {
+            position: absolute;
+            display: inline-block;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: #fff;
+        }
+
+        .lds-ellipsis div:nth-child(1) {
+            left: 8px;
+            animation: lds-ellipsis1 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(2) {
+            left: 8px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(3) {
+            left: 32px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+
+        .lds-ellipsis div:nth-child(4) {
+            left: 56px;
+            animation: lds-ellipsis3 0.6s infinite;
+        }
+
+        @keyframes lds-ellipsis1 {
+            0% {
+                transform: scale(0);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        @keyframes lds-ellipsis2 {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(24px, 0);
+            }
+        }
+
+        @keyframes lds-ellipsis3 {
+            0% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(0);
+            }
+        }
     </style>
 </head>
 <body>
 <noscript>Enable JavaScript on your browser</noscript>
 <div id="mobile-container">
-    <div id="app"></div>
+    <div id="app">
+        <div id="loader">
+            <div id="circle-container" class="lds-ellipsis">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
