--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         }
 
         #mobile-container {
-            background-color: #FFCCCC;
+            background-color: #C2C2C2C2;
             display: flex;
             justify-content: center;
             min-height: 100vh;
@@ -38,7 +38,7 @@
 
         #app {
             max-width: 375px;
-            max-height: 900px;
+            max-height: 1400px;
         }
 
         .v-application--wrap {
@@ -70,7 +70,7 @@
             width: 15px;
             height: 15px;
             border-radius: 50%;
-            background: #fff;
+            background: #ffffff;
         }
 
         .lds-ellipsis div:nth-child(1) {
